tests/rosetta/out/Pascal/abundant-deficient-and-perfect-number-classifications.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/abundant-deficient-and-perfect-number-classifications.pas
abundant-deficient-and-perfect-number-classifications.pas(15,10) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Double is nested;Register>"
abundant-deficient-and-perfect-number-classifications.pas(22,13) Error: Incompatible types: got "<procedure variable type of function(Variant):Double is nested;Register>" expected "LongInt"
abundant-deficient-and-perfect-number-classifications.pas(54) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
